# EnclosureTracking

./: README.md  pyproject.toml  requirements.txt
scripts/: add_videos_pretrained.py  evaluate_pretrained.py  finetune_pretrained.py  init_pretrained.py  topviewmouse_example.py  tracking_pretrained.py
src/enctracking/: helpers.py
src/enctracking/scripts/: add_videos_pretrained.py  copiedExample_pretrained.py  evaluate_pretrained.py  finetune_pretrained.py  init_pretrained.py  topviewmouse_example.py  tracking_pretrained.py
