[project]
name = "enctracking"
authors = [
  { name="Jonas I. Liechti", email="j-i-l@t4d.ch" },
]
dynamic = ["version", "dependencies"]
description = "Scripts to track and perform pose estimation of house mice in exp. enclosures"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[project.urls]
Homepage = "https://github.com/t4d-gmbh/EnclosureTracking"
Issues = "https://github.com/t4d-gmbh/EnclosureTracking/issues"

# [project.scripts]
# landiv = "landiv_blur.scripts.parallel_filter:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools_scm]

[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

